[gd_scene load_steps=9 format=3 uid="uid://pkfy7vddgpyx"]

[ext_resource type="Script" path="res://scripts/fireball_drop.gd" id="1_jtb6w"]
[ext_resource type="Texture2D" uid="uid://dpskrb1eoet5m" path="res://assets/Fireball/IdleLoop-Sheet.png" id="2_85it6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7pcm7"]
atlas = ExtResource("2_85it6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yk8x"]
atlas = ExtResource("2_85it6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ph63"]
atlas = ExtResource("2_85it6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0erh"]
atlas = ExtResource("2_85it6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fb2gh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pcm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yk8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ph63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0erh")
}],
"loop": true,
"name": &"fireball_idle",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0gieh"]
size = Vector2(10, 14)

[node name="Fireball" type="Node2D"]
script = ExtResource("1_jtb6w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 3
sprite_frames = SubResource("SpriteFrames_fb2gh")
animation = &"fireball_idle"
autoplay = "fireball_idle"
frame_progress = 0.0882766

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_0gieh")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 4.8
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
